monticore-generator/src/test/resources/cocos/invalid/A4022/A4022.mc4
package cocos.invalid.A4022;

grammar A4022 {

  A extends A;

}
